--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sentry/browser": "^6.19.7",
     "@sentry/node": "^6.19.7",
     "autosize": "^5.0.1",
+    "axios": "^1.5.1",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.20.0",
     "classnames": "^2.3.1",
