updated staging.env file

--- a/staging.env
+++ b/staging.env
@@ -41,3 +41,8 @@ REACT_APP_DEV_API_SERVER_PORT=3500
 REACT_APP_AVAILABILITY_ENABLED=true
 REACT_APP_DEFAULT_SEARCHES_ENABLED=true
 
+SHARETRIBE_USER_PASSWORD = CNVKJDNFV1322FJNFDNVDNF21323KDSFN
+
+# MemeberSpace
+REACT_APP_MEMBERSPACE_CLIENT_ID=memberspace
+
