testing with hardcoded values

--- a/staging.env
+++ b/staging.env
@@ -45,7 +45,7 @@ SHARETRIBE_USER_PASSWORD = CNVKJDNFV1322FJNFDNVDNF21323KDSFN
 
 # MemeberSpace
 REACT_APP_MEMBERSPACE_CLIENT_ID=memberspace
-KEY_ID=memberspace
+KEY_ID=32QGCG7Y8H
 
 
 # rsa keys
