reverted the hard coded code

--- a/staging.env
+++ b/staging.env
@@ -44,8 +44,9 @@ REACT_APP_DEFAULT_SEARCHES_ENABLED=true
 SHARETRIBE_USER_PASSWORD = CNVKJDNFV1322FJNFDNVDNF21323KDSFN
 
 # MemeberSpace
+# MemeberSpace
 REACT_APP_MEMBERSPACE_CLIENT_ID=memberspace
-KEY_ID=32QGCG7Y8H
+KEY_ID=memberspace
 
 
 # rsa keys
